<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/darkbackground"
    tools:context=".Links">




    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationY="130dp"
        android:translationX="-100dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:srcCompat="@drawable/doctor" />

    <ImageView
            android:id="@+id/imageView8"
            android:translationX="65dp"
            android:translationY="-65dp"
            android:layout_width="312dp"
            android:layout_height="451dp"
            app:srcCompat="@drawable/speechcloud"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:layout_marginStart="24dp" android:layout_marginTop="5dp"/>



    <ImageView
        android:id="@+id/imageView9"
        android:translationX="90sp"
        android:translationY="300sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="0.5"
        app:srcCompat="@drawable/table" ></ImageView>

    <TextView
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:textColor="@android:color/background_light"
        android:text="Links"
        android:fontFamily="@font/exo_2"
        android:textStyle="normal|bold"
        android:textSize="30sp"
        android:translationX="238sp"
        android:translationY="303sp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/link1"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/exo_2"
        android:text="@string/link1"
        android:textSize="14sp"
        android:clickable="true"
        android:translationX="190sp"
        android:translationY="350sp"
        android:visibility="visible" android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/link2"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/exo_2"
        android:text="@string/link2"
        android:textSize="14sp"
        android:clickable="true"
        android:translationX="190sp"
        android:translationY="390sp"
        android:visibility="visible" android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/link3"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/exo_2"
        android:text="@string/link3"
        android:textSize="14sp"
        android:clickable="true"
        android:translationX="190sp"
        android:translationY="435sp"
        android:visibility="visible" android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/link4"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/exo_2"
        android:text="@string/link4"
        android:textSize="14sp"
        android:clickable="true"
        android:translationX="190sp"
        android:translationY="480sp"
        android:visibility="visible" android:textColorLink="@color/colorPrimary"/>

    <TextView
        android:id="@+id/link5"
        android:layout_width="165sp"
        android:layout_height="50sp"
        android:textColor="@android:color/background_light"
        android:fontFamily="@font/exo_2"
        android:text="@string/link5"
        android:textSize="14sp"
        android:clickable="true"
        android:translationX="190sp"
        android:translationY="525sp"
        android:visibility="visible" android:textColorLink="@color/colorPrimary"/>



    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="218dp"
        android:layout_height="155dp"
        android:scrollbarStyle="insideInset"
        android:fadeScrollbars="false"
        android:scrollbarThumbVertical="@drawable/scrollview_thumb"
        android:scrollbarTrackVertical="@drawable/vertical_scrollview_traack"
        android:translationX="170sp"
        android:translationY="50sp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="175sp"
            android:layout_height="80sp"
            android:textColor="#000000"
            android:fontFamily="@font/exo_2"
            android:textStyle="normal|bold"
            android:text="If you are skeptical about my Covid-Stats research, you can tab and check the following links(first connect to Wi-Fi).This is where I collected my data and did the math work. They are reliable sources. "
            android:textSize="14sp"
            />

    </ScrollView>

</RelativeLayout>


